mudei uns erros

--- a/beekeeper.html
+++ b/beekeeper.html
@@ -30,8 +30,8 @@
 
    <section class="py-5">
      <div class="container">
-       <h2 class="font-weight-light">Sonho de valsa</h2>
-       <p>publicidade em outdoor e página dulpa para nova versão do bombom sonho de valsa</p>
+       <h2 class="font-weight-light">the bee keeper</h2>
+       <p>imagem de marca de uma empresa de mel de origem algarvia</p>
 
      </div>
    </section>
