--- a/index.html
+++ b/index.html
@@ -148,8 +148,8 @@
 
       </div>
       <div class="col-6">
-        <h3 class="text-uppercase">Markting</h3>
-        <p class="text-muted">Neuromarkting é uma das áreas que gosto imenso de explorar e aplica-la na publicidade. </p>
+        <h3 class="text-uppercase">Marketing</h3>
+        <p class="text-muted">Neuromarketing é uma das áreas que gosto imenso de explorar e aplica-la na publicidade. </p>
   </div>
   </div>
   </div>
